# notes-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.core  Dockerfile.telegram  Makefile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  jaeger.yaml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: ci-cd.yml
cmd/core/: main.go
cmd/notifications/: main.go
cmd/search/: main.go
cmd/telegram/: main.go
core/: Dockerfile  __init__.py  config.go  config.py  config_test.go  healthcheck.py  logger.go  main.py  notes.py  notes_test.go  path_test.go  server.go  server.py  server_test.go  stores.go  utils.go  utils.py  utils_test.go
core/features/: __init__.py  calendar_ops.py  logger.go  rating.go  rating.py  rating_test.go  tasks.go  tasks.py  tasks_test.go
frontends/: __init__.py
frontends/telegram/: Dockerfile  Dockerfile.python  __init__.py  bot.py  config.py  grpc_client.py  kafka_consumer.py  middleware.py  notifications_client.py  utils.py  whisper_client.py
integration/: core_test.go
makefiles/: search.mk
monitoring/: prometheus-targets.yml
notifications/: Dockerfile  Dockerfile.python  config.go  config.py  db.go  db.py  elasticsearch.go  healthcheck.py  logger.go  main.py  metrics.go  scheduler.go  scheduler.py  scheduler_test.go  server.go  server.py
proto/: buf.yaml  notes.proto  notifications.proto  whisper.proto
proto/notes/: notes.proto
search/: Dockerfile  README.md  chunker.go  chunker_test.go  config.go  db.go  embedder.go  indexer.go  logger.go  metrics.go  requirements.txt  scheduler.go  server.go  server.py
tests/: conftest.py  test_notes.py  test_notifications_scheduler.py  test_notifications_server.py  test_server.py  test_utils.py
whisper/: Dockerfile  healthcheck.py  main.py  server.py
(+91 files in other folders)
