[tool.poetry]
name = "telegram-notes-bot"
version = "0.1.0"
description = "Telegram bot for saving text messages to markdown notes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62"
grpcio-health-checking = "^1.62"
protobuf = ">=5.0"
faster-whisper = "^1.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.62"
ruff = "^0.14.4"
pre-commit = "^4.4.0"
mypy-protobuf = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["type-arg"]
